# RAG-Platform-4LS

./: .env.example  .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: chat.py  conversations.py  documents.py  eval.py  feedback.py  projects.py  retrieval.py  system.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/ingestion/: chunker.py  hashing.py  pipeline.py  status.py
apps/api/app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  eval.py  feedback.py  project.py  retrieval.py  settings.py
apps/api/app/rag/: __init__.py  answering.py  chat_service.py  citations.py  prompting.py
apps/api/app/schemas/: chat.py  eval.py  (+4 more)
apps/api/tests/: conftest.py  retrieval_test_helpers.py  test_alembic_migration.py  test_answer_generation.py  test_chat_api.py  test_chat_provider.py  test_chunker.py  test_citations.py  test_document_project_isolation.py  test_document_storage.py  test_documents_api.py  test_embedding_provider.py  test_eval_api.py  test_eval_judge.py  test_feedback_api.py  test_hybrid_retrieval.py  test_ingestion_failure.py  test_ingestion_pipeline.py  test_keyword_retrieval.py  test_model_metadata.py  test_parsers.py  test_project_isolation_schema.py  test_projects_api.py  test_prompting.py  test_rerankers.py  test_retrieval_api.py  test_retrieval_logging.py  test_retrieval_project_isolation.py  test_sqlite_metadata.py  test_system_config_api.py  test_vector_retrieval.py  test_worker_enqueue.py
(+87 files in other folders)
